--- a/sites/all/modules/recipe/recipe.css
+++ b/sites/all/modules/recipe/recipe.css
@@ -59,7 +59,9 @@
 .recipe-summary {
   float: right;
   width: 20em;
-  margin:0; padding:0;
+  margin:0;
+  margin-right:20px;
+  padding:0;
   font-size: 1.0em;
 }
 /* If summary is in block, remove float and width so that it won't blowup the layout. */
